--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://usermanage.ct.ws",
   "eslintConfig": {
     "extends": [
       "react-app",
